# reviewent

./: .env.example  .gitignore  BUILD_PLAN.md  Makefile  README.md  SKILL.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cr-review.yml
backend/: cli.py  config.py  main.py
backend/db/: database.py
backend/models/: feedback.py  pattern.py  review.py  user.py
backend/routers/: auth.py  drift.py  feedback.py  patterns.py  reviews.py  settings.py  webhooks.py
backend/services/: claude_service.py  context_service.py  diff_parser.py  github_service.py  llm.py  openai_service.py  pattern_service.py  review_agent.py
backend/tools/: __init__.py  fetch_file.py  fetch_tests.py  search_code.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/drift/: page.tsx
frontend/app/patterns/: page.tsx
frontend/app/review/[pr_id]/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: DiffViewer.tsx  FeedbackButtons.tsx  PRCard.tsx  ReviewComment.tsx  StatusBadge.tsx
frontend/lib/: api.ts
prompts/: file_review.md  pr_summary.md  system.md
tests/: test_claude_service.py  test_diff_parser.py  test_review_agent.py
